--- a/menu.html
+++ b/menu.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0; /* Cor de fundo para visualização */
+            font-family: Arial, sans-serif;
+        }
 
+        div {
+            text-align: center;
+        }
+
+        a {
+            display: block;
+            margin: 10px 0;
+            text-decoration: none;
+        }
+
+        button {
+            width: 200px; /* Largura fixa */
+            height: 50px; /* Altura fixa */
+            font-size: 18px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 5px #419455; /* Sombra para efeito 3D */
+            position: relative;
+        }
+
+        button:active {
+            box-shadow: 0 2px #666;
+            transform: translateY(4px); /* Efeito de pressionar o botão */
+        }
+
+        button:hover {
+            background-color: #45a049; /* Cor ao passar o mouse */
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <a href="jogo.html"><button>JOGAR</button></a>
+        <a href="info.html"><button>INFORMAÇÕES</button></a>
+        <a href="creditos.html"><button>CRÉDITOS</button></a>
+    </div>
 </body>
 </html>
