--- a/creditos.html
+++ b/creditos.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet">
+    <title>Créditos</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #353829;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            text-align: center;
+            max-width: 600px;
+            margin: 10px;
+        }
+        .return-icon {
+            font-size: 24px;
+            margin-top: 20px;
+            text-decoration: none;
+            color: white;
+        }
+    </style>
 </head>
 <body>
+    <h1>Créditos</h1>
+    <p>Desenvolvedor: Pedro Augusto Ricardo de Souza</p>
     
+    <p>Todos os direitos reservados</p>
+    <a href="menu.html" class="return-icon"><i class="bi bi-arrow-left-circle-fill"></i> Voltar ao Menu</a>
 </body>
 </html>
