--- a/jogo.html
+++ b/jogo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -16,7 +17,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #000;
+            background-color:#353829;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             color: #fff;
         }
@@ -35,23 +36,32 @@
             border: 1px solid #333;
         }
 
-        .food {
+        .back-to-menu {
             position: absolute;
-            background-color: blue;
-            border-radius: 50%;
+            top: 10px;
+            left: 10px;
+            font-size: 24px;
+            color: white;
+            text-decoration: none;
+        }
+
+        .back-to-menu:hover {
+            color: #ddd;
         }
     </style>
 </head>
 <body>
+    <a href="menu.html" class="back-to-menu">
+        <i class="bi bi-arrow-left-circle-fill"></i>
+    </a>
     <div id="score">Pontuação: 0</div>
     <div id="question">
         <p id="question-text"></p>
-        <input type="text" id="answer-input" >
-        <button type="button" id="submit-answer" class="btn btn-primary btn-sm">Responder</button>
+        <input type="text" id="answer-input">
+        <button type="button" id="submit-answer" class="btn btn-primary">Responder</button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
-
 
