--- a/info.html
+++ b/info.html
@@ -41,7 +41,12 @@
 </head>
 <body>
     <h1>Informações</h1>
-    <p>Pac-Math é um jogo educativo onde você controla o Pac-Man e responde a perguntas para ganhar pontos. Movimente o Pac-Man usando as setas do teclado e coma a comida para responder a uma pergunta. Cada resposta correta adiciona 10 pontos à sua pontuação.</p>
+    <p>Pac-Math é um jogo educativo onde você controla o 
+        Pac-Man e responde a perguntas para ganhar pontos.
+         Movimente o Pac-Man usando as setas do teclado e 
+         coma a comida para responder a uma pergunta. Cada 
+         resposta correta adiciona 15 pontos à sua pontuação,
+          mas cuidado, cada resposta errada você perde -30 pontos.</p>
     <p>Divirta-se jogando e aprendendo ao mesmo tempo!</p>
     <a href="menu.html" class="return-icon"><i class="bi bi-arrow-left-circle-fill"></i> Voltar ao Menu</a>
 </body>
